// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expenseList with empty message 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-pc"
    >
      Expense
    </div>
    <div
      className="show-for-pc"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item-message"
    >
      <span>
        No Expenses
      </span>
    </div>
  </div>
</div>
`;

exports[`should render expenseList with expenes 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-pc"
    >
      Expense
    </div>
    <div
      className="show-for-pc"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={195}
      createdAt={0}
      description="gum"
      id="1"
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={10000}
      createdAt={-345600000}
      description="rent"
      id="2"
      key="2"
      note=""
    />
    <ExpenseListItem
      amount={4500}
      createdAt={345600000}
      description="credit card"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;
